RESOLVED FIXED161769
URLParser failures should preserve the original input string
https://bugs.webkit.org/show_bug.cgi?id=161769
Summary URLParser failures should preserve the original input string
Alex Christensen
Reported 2016-09-08 16:27:48 PDT
URLParser failures should preserve the original input string
Attachments
Patch (11.58 KB, patch)
2016-09-08 16:30 PDT, Alex Christensen
thorton: review+
Alex Christensen
Comment 1 2016-09-08 16:30:44 PDT
Alex Christensen
Comment 2 2016-10-03 16:05:49 PDT
Note You need to log in before you can comment on or make changes to this bug.