URLParser failures should preserve the original input string https://bugs.webkit.org/show_bug.cgi?id=161769

Reviewed by Tim Horton.

Source/WebCore:

No new tests, but covered by updates to API tests.
This also represents many newly passing web platform tests when using URLParser.

* platform/URLParser.cpp:
(WebCore::URLParser::failure):
(WebCore::URLParser::parse):
* platform/URLParser.h:

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):
(TestWebKitAPI::shouldFail):



Canonical link: https://commits.webkit.org/179937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205678 268f45cc-cd09-0410-ab3c-d52691b4dbfc